--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <button type="">Shop Now</button>
         </div>
         <div class="Kow-image">
-            <img src="assessts/images/jeevan.jpg"
+            <img src="assessts/images/blackpanther.jpg"
             height="500px"
             width="500px"
             alt="">
